--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
 		"script": "ts-node scripts",
 		"publish": "npm run script -- publish"
 	},
+	"dependencies": {
+		"mssql": "^9.1.1",
+		"riao-dbal": "file:../riao-dbal"
+	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@types/jasmine": "^4.3.0",
+		"@types/mssql": "^8.1.2",
 		"@types/node": "^18.11.9",
 		"@typescript-eslint/eslint-plugin": "^5.44.0",
 		"@typescript-eslint/parser": "^5.44.0",
@@ -33,6 +38,8 @@
 		"prettier": "^2.8.0",
 		"prettier-eslint": "^15.0.1",
 		"prettier-eslint-cli": "^7.1.0",
+		"riao-driver-test": "file:../riao-driver-test",
+		"ts-appconfig": "^1.2.0",
 		"ts-node": "^10.9.1",
 		"ts-packager": "^1.1.0",
 		"ts-script": "^1.0.0",
