--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "riao-driver-mssql",
+	"name": "@riao/mssql",
 	"version": "1.0.0",
-	"description": "riao-driver-mssql",
+	"description": "riao driver for microsoft sql server",
 	"private": "true",
 	"typescript-template": {
 		"base": "1.0.0",
@@ -22,11 +22,12 @@
 		"publish": "npm run script -- publish"
 	},
 	"dependencies": {
-		"mssql": "^9.1.1",
-		"riao-dbal": "file:../riao-dbal"
+		"@riao/dbal": "^1.0.1",
+		"mssql": "^9.1.1"
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^1.0.2",
+		"@riao/driver-test": "^1.0.0",
 		"@types/jasmine": "^4.3.0",
 		"@types/mssql": "^8.1.2",
 		"@types/node": "^18.11.9",
@@ -38,7 +39,6 @@
 		"prettier": "^2.8.0",
 		"prettier-eslint": "^15.0.1",
 		"prettier-eslint-cli": "^7.1.0",
-		"riao-driver-test": "file:../riao-driver-test",
 		"ts-appconfig": "^1.2.0",
 		"ts-node": "^10.9.1",
 		"ts-packager": "^1.1.0",
@@ -49,13 +49,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/riao-driver-mssql/riao-driver-mssql.git"
+		"url": "git+https://github.com/riao-project/riao-driver-mssql.git"
 	},
-	"author": "riao-driver-mssql",
+	"author": "riao",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/riao-driver-mssql/riao-driver-mssql/issues"
+		"url": "https://github.com/riao-project/riao-driver-mssql/issues"
 	},
-	"homepage": "https://github.com/riao-driver-mssql/riao-driver-mssql#readme",
+	"homepage": "https://github.com/riao-project/riao-driver-mssql#readme",
 	"keywords": []
 }
