--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"target": "es2022",
 		"types": ["node"],
 		"typeRoots": [],
-		"lib": ["es2022"]
+		"lib": ["es2022"],
+		"skipLibCheck": true
 	},
 	"exclude": ["./dist/"],
 	"include": [
